// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders a disabled icon button 1`] = `
<div>
  <button
    aria-label="UserIcon"
    class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-132 iconButtonStyles-medium-138 iconButtonStyles-contained-133 Mui-disabled Mui-disabled"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Button component renders a flat button on dark background 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root buttonStyles-root-61 MuiButton-text buttonStyles-text-62 buttonStyles-textDarkBg-66 MuiButton-textPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label buttonStyles-label-64"
    >
      Caption
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button component renders a flat button with icon on dark background 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-192 iconButtonStyles-medium-198 iconButtonStyles-text-194 iconButtonStyles-textDark-195"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button component renders a small icon button 1`] = `
<div>
  <button
    aria-label="UserIcon"
    class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-112 iconButtonStyles-small-117 iconButtonStyles-contained-113"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button component renders an icon button 1`] = `
<div>
  <button
    aria-label="User"
    class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-92 iconButtonStyles-medium-98 iconButtonStyles-contained-93"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      Caption
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button component renders an opaque outlined button on dark background 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root buttonStyles-root-41 MuiButton-outlined buttonStyles-opaqueOutlined-48 MuiButton-outlinedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label buttonStyles-label-44"
    >
      Caption
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button component renders an outlined button on dark background 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-outlined buttonStyles-outlinedDarkBg-27 MuiButton-outlinedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label buttonStyles-label-24"
    >
      Caption
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button component renders button with color props 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root buttonStyles-root-221 MuiButton-contained buttonStyles-contained-223 MuiButton-containedSecondary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label buttonStyles-label-224"
    >
      Test
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button component renders button with component props 1`] = `
<div>
  <span
    aria-disabled="false"
    class="MuiButtonBase-root MuiButton-root buttonStyles-root-201 MuiButton-contained buttonStyles-contained-203 MuiButton-containedPrimary"
    role="button"
    tabindex="0"
  >
    <span
      class="MuiButton-label buttonStyles-label-204"
    >
      Test
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </span>
</div>
`;

exports[`Button component renders button with rest props 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root buttonStyles-root-241 MuiButton-contained buttonStyles-contained-243 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label buttonStyles-label-244"
    >
      Test
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button component renders correctly 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-contained buttonStyles-contained-3 MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label buttonStyles-label-4"
    >
      Caption
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Button component renders with additional classes 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root buttonStyles-root-161 MuiButton-contained buttonStyles-contained-163 MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label buttonStyles-label-164"
    />
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
